k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-api
  namespace: payments
  labels:
    app.kubernetes.io/name: billing-api
    app.kubernetes.io/instance: billing-api-prod
    team: payments
    env: prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: billing-api
    app.kubernetes.io/instance: billing-api-prod
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
